# typemap_core

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: get.rs  lib.rs  macros.rs  set.rs
tests/: nightly_ui.rs  version-number.rs
tests/nightly_ui/: missing_type.rs  missing_type.stderr
tests/ui/: not_enough_bounds.rs  not_enough_bounds.stderr
